<resources>
    <string name="app_name">Wifi Direct</string>
    <string name="wifi_on">Wifi On</string>
    <string name="discover">discover</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="connection_status">Connection Status</string>
    <string name="discover_peers">Discover Peers</string>
    <string name="disconnect">Disconnect</string>
    <string name="write_your_message_here">Write your message here</string>
</resources>